--- a/app/src/main/res/layout/fragment_student_profile.xml
+++ b/app/src/main/res/layout/fragment_student_profile.xml
@@ -32,7 +32,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
-            android:text="RIGELS\nRAJKU"
+
             android:textAlignment="center"
             android:textColor="#fff"
             android:textSize="35dp"
@@ -73,39 +73,37 @@
             app:layout_constraintVertical_bias="0.056">
 
             <LinearLayout
-                android:layout_width="100dp"
+                android:id="@+id/tutorial_count"
+                android:layout_width="102dp"
                 android:layout_height="80dp"
                 android:clickable="true"
                 android:focusable="true"
                 android:foreground="?android:attr/selectableItemBackground"
                 android:gravity="center"
-                android:orientation="vertical"
-                android:id="@+id/tutorial_count"
-                >
+                android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/tutorial_nr"
                     android:layout_width="wrap_content"
+
                     android:layout_height="wrap_content"
-                    android:text="158"
                     android:textColor="#fff"
                     android:textSize="22sp"
-                    android:textStyle="bold"
-                    android:id="@+id/tutorial_nr"/>
+                    android:textStyle="bold" />
 
                 <TextView
+                    android:id="@+id/tutorial_txt"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="TUTORIALS"
                     android:textColor="#fff"
-                    android:textSize="12sp"
-                    android:id="@+id/tutorial_txt"/>
+                    android:textSize="12sp" />
 
                 <RelativeLayout
                     android:layout_width="70dp"
                     android:layout_height="4dp"
                     android:layout_marginTop="8dp"
-                    android:background="@drawable/line_background"
-                    />
+                    android:background="@drawable/line_background" />
             </LinearLayout>
 
             <LinearLayout
@@ -121,7 +119,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="134"
+
                     android:textColor="#fff"
                     android:textSize="22sp"
                     android:textStyle="bold"
@@ -155,7 +153,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="169"
+
                     android:textColor="#fff"
                     android:textSize="22sp"
                     android:textStyle="bold"
@@ -177,31 +175,31 @@
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="100dp"
+                android:id="@+id/item_count"
+                android:layout_width="85dp"
                 android:layout_height="80dp"
                 android:clickable="true"
                 android:focusable="true"
                 android:foreground="?android:attr/selectableItemBackground"
                 android:gravity="center"
-                android:orientation="vertical"
-                android:id="@+id/item_count">
+                android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/item_nr"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="182"
+
                     android:textColor="#fff"
                     android:textSize="22sp"
-                    android:textStyle="bold"
-                    android:id="@+id/item_nr"/>
+                    android:textStyle="bold" />
 
                 <TextView
+                    android:id="@+id/item_txt"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="ITEMS"
                     android:textColor="#fff"
-                    android:textSize="12sp"
-                    android:id="@+id/item_txt"/>
+                    android:textSize="12sp" />
 
                 <RelativeLayout
                     android:layout_width="70dp"
