--- a/app/src/main/res/layout/fragment_student_profile.xml
+++ b/app/src/main/res/layout/fragment_student_profile.xml
@@ -43,7 +43,7 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.437" />
+            app:layout_constraintVertical_bias="0.371" />
 
         <RelativeLayout
             android:id="@+id/relativeLayout"
@@ -96,7 +96,7 @@
                     android:id="@+id/tutorial_txt"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="TUTORIALS"
+                    android:text="UNIVERSITIES"
                     android:textColor="#fff"
                     android:textSize="12sp" />
 
