--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -33,7 +33,7 @@
     <color name="eventColor">#FFEEB994</color>
     <color name="tutorialColor">#FFAED7E4</color>
     <color name="tradeColor">#FFE13D40</color>
-    <color name="uniColor">#346111</color>
+    <color name="uniColor">#4F9419</color>
     <color name="internshipColor">#FFABDF89</color>
 
 
