--- a/app/src/main/res/layout/fragment_student_unitrade.xml
+++ b/app/src/main/res/layout/fragment_student_unitrade.xml
@@ -18,7 +18,8 @@
             android:id="@+id/textGrid"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="UniStud Trade"
+            android:text="UniTrade"
+            android:textStyle="italic"
             android:textSize="34sp"
             android:textColor="@android:color/black"
             android:layout_centerInParent = "true" />
