--- a/app/src/main/res/layout/activity_student_internship_profile.xml
+++ b/app/src/main/res/layout/activity_student_internship_profile.xml
@@ -64,16 +64,18 @@
 
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="0dp">
 
             <LinearLayout
                 android:id="@+id/organization_internship_profile_content"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="30dp"
                 android:layout_marginTop="20dp"
                 android:layout_marginRight="30dp"
-                android:orientation="vertical"
-                android:layout_marginLeft="30dp">
+                android:orientation="vertical">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -85,48 +87,48 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="sans-serif-light"
                         android:text="Description:"
-                        android:textSize="13sp"
-                        android:textColor="@color/profileHeadings"/>
+                        android:textColor="@color/profileHeadings"
+                        android:textSize="13sp" />
 
                     <TextView
                         android:id="@+id/student_internship_profile_desc"
                         android:layout_width="match_parent"
-                        android:layout_height="80dp"
+                        android:layout_height="205dp"
                         android:fontFamily="sans-serif-light"
-                        android:textSize="18sp"
                         android:inputType="textMultiLine"
-                        android:textColor="#000000" />
+                        android:textColor="#000000"
+                        android:textSize="18sp" />
 
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="0dp"
                     android:orientation="vertical">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="sans-serif-light"
-                        android:text="Deadline:"
-                        android:textSize="13sp"
-                        android:textColor="@color/profileHeadings"/>
+                        android:text="Last day for applications:"
+                        android:textColor="@color/profileHeadings"
+                        android:textSize="13sp" />
 
                     <LinearLayout
                         android:id="@+id/internship_date_group"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
-                        android:layout_below="@id/event_location_field"
                         android:orientation="horizontal">
 
                         <TextView
                             android:id="@+id/internship_pick_date"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:hint="Set The Date"
                             android:layout_weight="1"
-                            android:ems="10"/>
+                            android:ems="10"
+                            android:hint="Set The Date" />
 
                     </LinearLayout>
 
@@ -139,7 +141,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:layout_marginBottom="266dp"
+            android:layout_marginBottom="0dp"
             android:orientation="vertical">
 
 
@@ -147,10 +149,10 @@
                 android:id="@+id/student_internship_profile_save"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="24dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginBottom="8dp"
+                android:layout_marginStart="0dp"
+                android:layout_marginTop="0dp"
+                android:layout_marginEnd="0dp"
+                android:layout_marginBottom="0dp"
                 android:background="@drawable/button_message_background"
                 android:foreground="?android:attr/selectableItemBackground"
                 android:text="SAVE"
