--- a/app/src/main/res/layout/activity_tutorial_list.xml
+++ b/app/src/main/res/layout/activity_tutorial_list.xml
@@ -57,12 +57,12 @@
 
         <TextView
             android:id="@+id/tutorial_proceed_text"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="84dp"
+            android:layout_height="97dp"
             android:layout_gravity="center"
             android:layout_marginRight="25dp"
             android:layout_weight="1"
-            android:gravity="right"
+            android:gravity="center|right|center_horizontal"
             android:text="Play"
             android:textColor="#ffffff"
             android:textSize="15sp" />
