--- a/app/src/main/res/layout/fragment_student_profile.xml
+++ b/app/src/main/res/layout/fragment_student_profile.xml
@@ -13,17 +13,34 @@
         android:orientation="vertical"
         android:id="@+id/above_list">
 
-        <ImageView
+        <!--<ImageView
+            android:id="@+id/profilee_image"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/profilee_image"
-            />
+            android:layout_marginBottom="8dp"
+            android:background="@drawable/image" />-->
 
 
-        <ImageView
+       <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:src="@drawable/image_visivility" />
+
+        <ImageView
+            android:id="@+id/profilee_image"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/image"
+            app:layout_constraintBottom_toTopOf="@+id/user_name"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
 
         <TextView
             android:id="@+id/user_name"
@@ -73,7 +90,7 @@
             app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
             app:layout_constraintVertical_bias="0.056">
 
-            <LinearLayout
+            <!--<LinearLayout
                 android:id="@+id/tutorial_count"
                 android:layout_width="102dp"
                 android:layout_height="80dp"
@@ -105,7 +122,7 @@
                     android:layout_height="4dp"
                     android:layout_marginTop="8dp"
                     android:background="@drawable/line_background" />
-            </LinearLayout>
+            </LinearLayout>-->
 
             <LinearLayout
                 android:layout_width="100dp"
